Fix dark mode

--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -93,14 +93,14 @@
   }
 }
 
-html {
+/* html {
   opacity: 0;
-}
+} */
 
-/* html[data-theme='dark'], */
+/* html[data-theme='dark'],
 html[data-theme='light'] {
   opacity: initial;
-}
+} */
 
 @layer components {
   .border-content {
